fix: update mobile font size in header component for better readability on smaller screens

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -57,7 +57,7 @@
       white-space: nowrap;
 
       @include mobile {
-        font-size: mobile-vw(16px);
+        font-size: mobile-vw(17px);
       }
     }
   }
